double scrollbar fixed

--- a/index.css
+++ b/index.css
@@ -6,7 +6,8 @@
 body,
 html {
   margin: 0;
-  overflow-x: hidden;
+  overflow-y: visible;
+  overflow-x:hidden;
   font-family: "barlow";
 }
 
@@ -781,7 +782,7 @@ p {
 
   h3.heading {
     margin: 20px 0 20px 0 !important;
-    width: 70%;
+    width:60%;
     line-height: 36px;
   }
 
@@ -910,7 +911,7 @@ p {
     font-size: 24px !important;
     line-height: 28px;
     margin: 0 0 20px 0 !important;
-    width: 255px;
+    width: 70%;
   }
 
   .parag {
@@ -926,14 +927,14 @@ p {
 
 
 
-@media only screen and (min-width:2560px){
+/* @media only screen and (min-width:2560px){
   .pre-order-bar{
     width:100%;
     gap:70%
-}
+} */
 
 /* .section-1 */
-
+/* 
 .card-1{
   display: flex;
   height: 500px !important;
@@ -951,4 +952,4 @@ p {
   background-repeat: no-repeat;
   background-size: cover !important;
 }
-}
+} */
